objects/pse__Version_Config__c.object
<CustomObject>
    <description>Holds the configs Baseline and Versioning customisation.</description>
    <fields>
        <fullName>pse__Capture_Config__c</fullName>
        <description>The fields to include in a project version. Content is stored as JSON code strings.</description>
        <inlineHelpText>The fields to include in a project version. Content is stored as JSON code strings.</inlineHelpText>
        <label>Fields To Include</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines the default Version Config object as configured to capture objects and fields when creating project baselines and versions. Only one Version Config object can be set as the default.</description>
        <inlineHelpText>Determines the default Version Config object as configured to capture objects and fields when creating project baselines and versions. Only one Version Config object can be set as the default.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Summary__c</fullName>
        <description>Summary notes related to the version config.</description>
        <inlineHelpText>Summary notes related to the version config.</inlineHelpText>
        <label>Summary</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Unique_Name__c</fullName>
        <description>The unique name for the Version Config record.</description>
        <inlineHelpText>The unique name for the Version Config record.</inlineHelpText>
        <label>Unique Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Version Config</label>
    <nameField>
        <label>Version Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Version Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>